--- a/templates/base.html
+++ b/templates/base.html
@@ -144,6 +144,8 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+  {% block content %}
+    {% endblock %}
   <footer class="bg-dark text-white py-5">
     <div class="container">
       <div class="row">
@@ -177,6 +179,7 @@
       </div>
     </div>
   </footer>
+
   {% if messages %}
   <div class="message-container"></div>
   {% endif %}
