--- a/templates/base.html
+++ b/templates/base.html
@@ -173,7 +173,7 @@
       </div>
       <hr class="my-4">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 text-center">
           <p>&copy; 2023 Astro Apparel. All rights reserved.</p>
         </div>
       </div>
